tests/integration/errors/empty_tuple_type.rsg
// TEST: compile_error
// EXPECT-ERROR: empty tuple '()' is not a valid type; use 'unit'

fn main() {
    var x: () = unit
}
